src/test/deca/syntax/valid/synt/class_decl_method_with_params.deca
/*
    Description: Declaration d'une methode dans une classe avec des paramètres

    Résultat : OK
*/
class A{
    void x(int a, int b, int c){

    }
}
