src/test/deca/syntax/invalid/synt/instruction_in_class_declaration.deca
/*
    Description : Utilisation d'un println à l'intérieur d'une classe en dehors d'une méthode

    Résultat: Erreur syntaxique (deca:7:4)
*/
class A{
    println("A");
}
// @expected_output deca:7:4: mismatched input 'println' expecting {'extends', '{'}
